...
    <string name="duration_0h_0m_0s">Duration: 0h 0m 0s</string>
    <string name="saved_media_images_videos">Saved Media • Images • Videos</string>
    <string name="no_downloads_available">No downloads available</string>
    <string name="no_files_found">No files found</string>
    <string name="crop">crop</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="_saved">Saved</string>
    <string name="recent_downloads">RECENT DOWNLOADS</string>
    <string name="no_downloads_yet">No downloads yet</string>
    <string name="fast_amp_secure_downloader"><![CDATA[Fast & Secure Downloader]]></string>

    <string name="custom_video_trim">Custom Video Trim</string>
...
    <string name="everything_is_clear">Everything is Clear!</string>

    <string name="permissions_required">Permissions Required</string>
    <string name="grant_access_to_save_your_favorite_status">Grant access to save your favorite status</string>

    <string name="status_folder">Status Folder</string>
    <string name="allow">Allow</string>
    <string name="how_to_set_path_view_guide">How to set path? View Guide</string>
    <string name="need_help_contact_us_at_nmariaadeeb982_gmail_com">Need help? Contact us at\nmariaadeeb982@gmail.com</string>
    <string name="to_fetch_recent_status">To fetch recent status</string>
    <string name="status_downloader">Status Downloader</string>
    <string name="select_app">Select App</string>
    <string name="choose_whatsapp_to_scan_media">Choose WhatsApp to scan media</string>
...
