...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Thumbnail -->
        <ImageView
            android:id="@+id/imageThumb"
            android:layout_width="100dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_bg"
            android:clipToOutline="true"
            android:contentDescription="@string/app_name"
...
