...
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="3">

                <!-- Button: Images -->
                <LinearLayout
                    android:id="@+id/btnImages"
                    style="@style/MenuButtonStyle"
                    android:layout_weight="1">
                    <ImageView
                        style="@style/MenuIconStyle"
                        android:background="@drawable/bg_icon_circle_green"
                        android:src="@drawable/ic_wa_images" />
...
